css y html terminados

--- a/frontend/empleos.html
+++ b/frontend/empleos.html
@@ -6,7 +6,7 @@
     
     <link rel="stylesheet" href="./styles/empleos.css">
     
-    <title>DevJobs</title>
+    <title>DevJobs - Empleos</title>
 </head>
 <body>
    <header class="header-empleos">
@@ -142,14 +142,20 @@
         </section>
 
         <footer>
-            <nav>
-                <a href="#"><</a>
-                <a href="#">1</a>
+            <nav class="paginacion">
+                <a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-left"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M15 6l-6 6l6 6" />
+                    </svg>
+                </a>
+                <a class="is-active" href="#">1</a>
                 <a href="#">2</a>
                 <a href="#">3</a>
                 <a href="#">4</a>
                 <a href="#">5</a>
-                <a href="#">></a>
+                <a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-right"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 6l6 6l-6 6" />
+                    </svg>
+                </a>
             </nav>
         </footer>
 
