--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="./styles/index.css">
 
-    <title>DevJobs</title>
+    <title>DevJobs - Inicio</title>
 </head>
 <body>  
     <header class="header">
